# ktexteditor_quickpicture

./: CMakeLists.txt  controller.cpp  controller.h  directcameraaccesscontroller.cpp  directcameraaccesscontroller.h  ktexteditor_quickpicture.desktop  ktexteditor_quickpicture.rc  quickpicture.cpp  quickpicture.h  quickpicture.kdev4  simple_controller.cpp  simple_controller.h
